# sln_voice

applications/ffd/: ffd.cmake
applications/ffd/bsp_config/XK_VOICE_L71/: XK_VOICE_L71.xn
applications/ffd/src/: FreeRTOSConfig.h  app_conf.h  main.c
applications/ffd/src/intent_handler/: intent_handler.c
applications/ffd/src/ssd1306/: ssd1306_rtos_support.c
applications/ffd/src/usb/: tusb_config.h  usb_descriptors.c  usb_descriptors.h  usb_video.c  usb_video.h
examples/: examples.cmake
examples/audio_mux/: audio_mux.cmake
examples/audio_mux/bsp_config/XCORE-AI-EXPLORER/: XCORE-AI-EXPLORER.cmake
examples/audio_mux/bsp_config/XCORE-AI-EXPLORER/platform/: driver_instances.c  driver_instances.h  platform_init.c  platform_start.c
examples/audio_mux/modules/io/modules/adat/: CMakeLists.txt
examples/audio_mux/modules/io/modules/spdif/: CMakeLists.txt
examples/audio_mux/modules/rtos/modules/drivers/: CMakeLists.txt
examples/audio_mux/modules/rtos/modules/drivers/adat/: CMakeLists.txt
examples/audio_mux/modules/rtos/modules/drivers/spdif/: CMakeLists.txt
examples/audio_mux/modules/rtos/modules/drivers/spdif/api/: rtos_spdif.h
examples/audio_mux/modules/rtos/modules/drivers/spdif/src/: rtos_spdif.c
examples/audio_mux/src/: app_conf.h  main.c
examples/audio_mux/src/usb/: usb_audio.c
examples/fast_flash_test/: fast_flash_test.cmake
examples/fast_flash_test/bsp_config/XK_VOICE_L71/: XK_VOICE_L71.cmake
examples/fast_flash_test/bsp_config/XK_VOICE_L71/platform/: driver_instances.c  driver_instances.h  platform_conf.h  platform_init.c  platform_init.h  platform_start.c
examples/fast_flash_test/qspi_fast_flash_read/: CMakeLists.txt
examples/fast_flash_test/qspi_fast_flash_read/api/: qspi_flash_fast_read.h  qspi_flash_fast_read_default_pattern.h
examples/fast_flash_test/qspi_fast_flash_read/src/: qspi_flash_fast_read.c  qspi_flash_fast_read_calibration.c  qspi_flash_fast_read_priv.h
examples/fast_flash_test/src/: main.c
examples/ffd/inference/wanson/: wanson_inf_eng.c
examples/ffd/src/: app_conf.h  main.c
examples/ffd/src/audio_pipeline/: audio_pipeline.c
examples/ffd/src/rtos_conf/: FreeRTOSConfig.h
examples/ffva/src/: FreeRTOSConfig.h
examples/ffva/src/usb/: tusb_config.h  usb_audio.c
tools/ci/: pipeline_check.sh  process_wav.sh
